--- a/java/ng/src/main/resources/apingdemo.properties
+++ b/java/ng/src/main/resources/apingdemo.properties
@@ -4,8 +4,8 @@ APPLICATION_JSON=application/json
 TIMEOUT=10000
 
 #API NG URL
-APING_URL=https://beta-api.betfair.com/
-JSON_RPC_SUFFIX=json-rpc/
+APING_URL=https://api.betfair.com/exchange/betting/
+JSON_RPC_SUFFIX=json-rpc/v1
 RESCRIPT_SUFFIX=rest/v1.0/
 
 #Bet size and price
