Include the MarketTypeResult in the csproj
Fix the issue where the marketyperesult wasnt included in the csproj

--- a/cSharp/Api-ng-sample-code/Api-ng-sample-code/Api-ng-sample-code.csproj
+++ b/cSharp/Api-ng-sample-code/Api-ng-sample-code/Api-ng-sample-code.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Json\JsonRequest.cs" />
     <Compile Include="Json\JsonResponse.cs" />
     <Compile Include="Json\RescriptRequest.cs" />
+    <Compile Include="MarketTypeResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RescriptClient.cs">
