--- a/cSharp/Api-ng-sample-code/Api-ng-sample-code/Api-ng-sample-code.csproj
+++ b/cSharp/Api-ng-sample-code/Api-ng-sample-code/Api-ng-sample-code.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <LangVersion>8</LangVersion>
     <VersionPrefix>1.0.1</VersionPrefix>
     <LangVersion>6</LangVersion>
+    <Copyright>Copyright © Betfair 2013</Copyright>
+    <Product>Api-ng-sample-code</Product>
+    <Company>Betfair</Company>
   </PropertyGroup>
 
   <ItemGroup>
