--- a/java/ng/pom.xml
+++ b/java/ng/pom.xml
@@ -25,32 +25,40 @@
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
-	    <plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<configuration>
-			<descriptorRefs>
-				<descriptorRef>jar-with-dependencies</descriptorRef>
-			</descriptorRefs>
-			<appendAssemblyId>false</appendAssemblyId>
-			<attach>true</attach>
-			<finalName>${project.artifactId}-all-${project.version}</finalName>
-			<archive>
-				<manifest>
-					<mainClass>com.betfair.aping.ApiNGDemo</mainClass>
-				</manifest>
-			</archive>
-		</configuration>
-		<executions>
-			<execution>
-				<id>make-assembly</id><!-- this is used for inheritance merges -->
-				<phase>package</phase><!-- append to the packaging phase. -->
-				<goals>
-					<goal>attached</goal><!-- goals == mojos -->
-				</goals>
-			</execution>
-		</executions>
-	 </plugin>
-        </plugins>
+			<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<configuration>
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+				<appendAssemblyId>false</appendAssemblyId>
+				<attach>true</attach>
+				<finalName>${project.artifactId}-all-${project.version}</finalName>
+				<archive>
+					<manifest>
+						<mainClass>com.betfair.aping.ApiNGDemo</mainClass>
+					</manifest>
+				</archive>
+			</configuration>
+			<executions>
+				<execution>
+					<id>make-assembly</id><!-- this is used for inheritance merges -->
+					<phase>package</phase><!-- append to the packaging phase. -->
+					<goals>
+						<goal>single</goal><!-- goals == mojos -->
+					</goals>
+				</execution>
+			</executions>
+		 </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
     </build>
 
 	<dependencies>
